--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,8 @@ dependencies {
   compile 'com.mashape.unirest:unirest-java:1.4.9'
   compile 'org.mongodb:mongodb-driver:3.2.2'
   compile 'org.twitter4j:twitter4j-core:4.0.4'
+  compile 'org.twitter4j:twitter4j-stream:4.0.4'
   compile 'au.com.bytecode:opencsv:2.4'
-
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
