--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   compile 'org.twitter4j:twitter4j-core:4.0.4'
   compile 'org.twitter4j:twitter4j-stream:4.0.4'
   compile 'au.com.bytecode:opencsv:2.4'
+  compile 'com.univocity:univocity-parsers:2.0.2'
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
