--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
   compile 'org.twitter4j:twitter4j-stream:4.0.4'
   compile 'au.com.bytecode:opencsv:2.4'
   compile 'com.univocity:univocity-parsers:2.0.2'
+  compile 'org.elasticsearch:elasticsearch:2.2.0'
+  compile 'com.google.code.gson:gson:2.6.2'
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
