--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
   compile 'com.univocity:univocity-parsers:2.0.2'
   compile 'org.elasticsearch:elasticsearch:2.2.0'
   compile 'com.google.code.gson:gson:2.6.2'
+  compile group: 'io.searchbox', name: 'jest', version: '2.0.2'
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
