--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
   compile 'org.elasticsearch:elasticsearch:2.2.0'
   compile 'com.google.code.gson:gson:2.6.2'
   compile group: 'io.searchbox', name: 'jest', version: '2.0.2'
+  compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
   testCompile group: 'junit', name: 'junit', version: '4.11'
 }
